hides overflow to prevent animations going out of bounds

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,7 @@ body {
     min-width: 375px;    
     min-height: 667px;
     overflow-block: hidden;
+    overflow: hidden;
 }
 
 /* ------------------------- Deck Controls */
